<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cashsend_opscpart2</string>
    <string name="web_client_id">433516101094-2muq1hlr39s22fn672j7beeursrkgth4.apps.googleusercontent.com</string>
    <string name="action_settings">Settings</string>
    <string name="location_text">Location: %1$s</string>
    <string name="amount_text">Amount: R %1$s</string>
    <string name="user_id_not_found">User ID not found. Please log in again.</string>
    <string name="qr_parse_error">Failed to parse QR code data</string>
    <string name="language_change_message">Please logout and login again for changes to take effect</string>
    <string name="logo_description">CashSend Logo</string>
    <string name="back_button_description">Go back</string>
    <string name="next">Next</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet...</string>
    <string name="save_button_text">Save</string>
    <string name="previous">Previous</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="payment_screen_title">Payment Screen</string>
    <string name="payment_prompt">You are about to pay</string>
    <string name="pay_button_text">Pay</string>
    <string name="cancel_button_text">Cancel</string>
    <!-- Common Labels -->
    <string name="add_new_card_title">ADD NEW CARD</string>
    <string name="card_number_hint">Card number</string>
    <string name="card_holder_name_hint">Name of card holder</string>
    <string name="expiration_date_hint">Expiration date (MM/YY)</string>
    <string name="cvv_hint">CVV</string>
    <string name="add_button">ADD</string>
    <string name="add_card_description">Add Card</string>
    <string name="filter_button_description">Filter</string>

    <string name="theme_label">Theme</string>
    <string name="language_label">Language</string>
    <string name="currency_label">Currency</string>
    <string name="logout_label">Log out</string>

    <!-- Content Descriptions -->
    <string name="theme_icon_description">Theme Icon</string>
    <string name="language_icon_description">Language Icon</string>
    <string name="currency_icon_description">Currency Icon</string>
    <string name="logout_icon_description">Log Out Icon</string>
    <string name="email_username_hint">Email/Username</string>

    <string name="back_arrow_description">Back Arrow</string>
    <string name="my_account_title">MY ACCOUNT</string>

    <string name="more_options_description">More options</string>
    <string name="qr_text">Scan QR Code</string>
    <string name="notifications_text">NOTIFICATIONS</string>
    <string name="qr_code_scanner_description">QR code scanner</string>
    <string name="me_text">ME</string>
    <string name="settings_text">SETTINGS</string>

    <string name="card_name_text">Card Name</string>
    <string name="masked_card_number">**** **** **** 1234</string>
    <string name="selected_indicator_description">Selected Indicator</string>

    <string name="login_text">LOGIN</string>
    <string name="signup_text">SIGN UP</string>
    <string name="enter_username_hint">Enter your username / email</string>
    <string name="login_button_text">LOGIN</string>
    <string name="or_text">OR</string>
    <string name="google_icon_description">Google Sign In</string>

    <string name="payment_amount">R 100,00</string>
    <string name="time_text">16:37 PM</string>
    <string name="details_button_description">Details</string>
    <string name="additional_details_text">Detailed information about this notification</string>

    <string name="cards_title">CARDS</string>
    <string name="add_new_card_text">Add a new card</string>

    <string name="notifications_title">NOTIFICATIONS</string>
    <string name="recent_notifications">Recent Notifications</string>
    <string name="no_notifications">No notifications for this date.</string>
    <string name="filter_button">Filter</string>
    <string name="settings_title">Settings</string>
    <string name="signup_button_text">SIGN UP</string>
    <string name="username_hint">Enter your username / email</string>
    <string name="dob_hint">Date of Birth</string>
    <string name="signup_button_label">SIGN UP</string>

    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="currency">Currency</string>
    <string name="log_out">Log out</string>

    <string name="recipient_name">Recipient Name</string>
    <string name="amount">Amount</string>
    <string name="time">Time</string>
    <string name="details">Details</string>
    <string name="my_account">MY ACCOUNT</string>
    <string name="edit_profile_picture">EDIT</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="date_of_birth_hint">Date of Birth</string>
    <string name="email_hint">Email/Username</string>
    <string name="password_hint">Password</string>
    <string name="mobile_number_hint">Mobile Number</string>
    <string name="save_button">SAVE</string>

    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="enter_email_hint">Enter your username / email</string>
    <string name="enter_password_hint">Enter your password</string>

</resources>
