<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginTop="195dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/switch_tumbs"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/LoginBtn"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:background="@drawable/switch_trcks"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp"
                    android:paddingRight="15dp"
                    android:text="@string/login_text"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    android:textStyle="bold|normal" />

                <TextView
                    android:id="@+id/SignUpBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp"
                    android:text="@string/signup_text"
                    android:textAlignment="center"
                    android:textColor="@color/blueColor"
                    android:textSize="20sp"
                    android:textStyle="bold|normal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LoginLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="25dp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:hint="@string/enter_username_hint"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    app:shapeAppearanceOverlay="@style/Button4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/eMailuSername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName|textEmailAddress"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:hint="@string/enter_password_hint"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    app:endIconMode="password_toggle"
                    app:shapeAppearanceOverlay="@style/Button4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pAssword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/LoginBtnBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="@color/redColor"
                android:elevation="15dp"
                android:gravity="center"
                android:text="@string/login_button_text"
                android:textAllCaps="false"
                android:textColor="@color/textColor"
                android:textSize="17sp"
                app:shapeAppearanceOverlay="@style/Button5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/or_text"
                android:textAlignment="center"
                android:textColor="#5A5858"
                android:textSize="18sp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/google_btn"
                    android:layout_width="35dp"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_google"
                    android:contentDescription="@string/google_icon_description" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
